--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <nav class="nav-bar">
            
            <div class="navbar-brand">
-                <img id="jane" class="rounded-circle img-fluid" src="./images/party_starter.jpg" alt="The picture of Jane musician">
+                <img id="jane" class="rounded-circle img-fluid" src="./images/Jane.jpg" alt="The picture of Jane musician">
                 <p>Jane Wilson</p>
             </div>
            
